Also fix submit button white-space to allow overflow

--- a/static/css/devhub/dashboard.less
+++ b/static/css/devhub/dashboard.less
@@ -120,6 +120,10 @@
     .item {
         margin: 0;
     }
+
+    a.button {
+        white-space: normal;
+    }
 }
 
 .html-rtl .dashboard {
